Health-Connect: Refactoring